--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
-<h1>Sobre a Barbearia Alura</h1>
+<!DOCTYPE htm1>
+<htm1 lang="pt-br">
+    <head>
+        <meta charset="UTF-8-">
+        <title>barbearia alura</title>
+    </head>
+  
+    <meta charset="UTF-8-">
+    <title>Barearia Alura</title>
+    <body>
+        <h1>Sobre a Barbearia Alura</h1>
 
-<p>Localizada no coração da cidade a <strong>barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a barbearia Alura já é destaque na cidade e conquista novos
-clientes a cada dia. 
+        <p>Localizada no coração da cidade a <strong>barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a barbearia Alura já é destaque na cidade e conquista novos
+        clientes a cada dia. 
 
-<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"<strong>.</strong></em></p>
-
-
-Oferecemos profissionais experientes e antenados ás mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade,
-garantindo qualidade e satisfação dos nossos clientes.</p>
+        <p style="fonte-size"<em> em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"<strong>.</em></p>
 
 
+        <p>Oferecemos profissionais experientes e antenados ás mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade,
+        garantindo qualidade e satisfação dos nossos clientes.</p>
+    </body>
+</htm1>
 
 <tag>
