--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE htm1>
+!DOCTYPE htm1>
 <htm1 lang="pt-br">
     <head>
         <meta charset="UTF-8-">
@@ -13,7 +13,7 @@
         <p>Localizada no coração da cidade a <strong>barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a barbearia Alura já é destaque na cidade e conquista novos
         clientes a cada dia. 
 
-        <p style="fonte-size"<em> em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"<strong>.</em></p>
+        <p style=<em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"<strong>.</em></p>
 
 
         <p>Oferecemos profissionais experientes e antenados ás mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade,
